# isucon6_rust

./: Cargo.toml  Rocket.toml
src/: main.rs
templates/: authentication.html.tera  base.html.tera  index.html.tera  keyword.html.tera
templates/widget/: keyword.html.tera
