[package]
name = "scratch_isucon6"
version = "0.1.0"
authors = ["nasa <htilcs1115@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
mysql = "15.1"
failure = "0.1.5"
serde = "1.0.75"
serde_derive = "1.0.75"
handlebars = "1.1"
chrono = {version = "0.4.6" , features = ["serde"]}
sha-1 = "0.7.0"
rand = "*"
reqwest="*"
regex="*"
[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
